<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Gym</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_register_link">没有账号？快速注册<a href="#" mce_href="#">注册</a></string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="name_not_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>
    <string name="tj">训练推荐问答</string>
    <string name="jgtj">训练需要一直坚持？</string>
    <string name="ystj">训练每次大于三小时？</string>
    <string name="pptj">训练有助于身体健康？</string>
    <string name="lxtj">训练是不分年龄的？</string>
    <string name="xntj">训练是随时可进行的？</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">下一问</string>
    <string name="correct_toast">回答正确!</string>
    <string name="incorrect_toast">回答错误!</string>
    <string name="zz">您确定要查看答案么？</string>

    <string name="text">我们的训练器械应有尽有，欢迎您来！！！</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="cheat_button">查看答案详情</string>
    <string name="judgment_toast">您偷偷看了答案呦！</string>

</resources>
